# configs

./: .Xresources  .bash_completion  .bash_profile  .bashrc  .ccache  .contacts  .dialogrc  .dircolors  .ghci  .gitattributes  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .gtkrc-2.0  .gvimrc  .haskeline  .inputrc  .mailcap  .pam_environment  .rtorrent.rc  .shell_prompt.sh  .synergy.conf  .taskrc  .tmux.conf  .xinitrc  .xmobarrc  .xserverrc  .yamllint.yaml  README.md
.abook/: abookrc
.colors/: bubblegum  solarized
.config/: .gitignore  archey3.cfg  chrome-flags.conf  mimeapps.list  modprobed-db.conf  mpd-notification.conf
.config/xmonad/: .gitignore  build  package.yaml  stack-lts-14.6.yaml  stack-nightly-2019-11-29.yaml  stack.yaml  xmonad-configuration.cabal  xmonad-my.cabal  xmonad.hs
.config/xmonad/lib/: Commands.hs  Debug.hs  MyLayouts.hs  MyMain.hs  MyNotify.hs  MyRun.hs  MyTheme.hs  MyXmobar.hs  Scratchpads.hs  SolarizedColorScheme.hs  Util.hs
.config/xmonad/lib/XMonad/Config/: CommandsKeysF.hs  Solarized.hs
.config/xmonad/lib/XMonad/Prompt/: Qutebrowser.hs
.config/xmonad/lib/XMonad/Util/: DesktopNotifications.hs  NamedCommands.hs
.davfs2/: davfs2.conf
.electrum/: .gitignore
.emacs.d/: init.el
.gnupg/: .gitignore  README.md  dirmngr.conf  gpg-agent.conf  gpg.conf  scdaemon.conf
.irssi/: config  lucid.theme
.lbdb/: rc
.local/: .gitignore
.ssh/: .gitignore  config
.stack/: .gitignore  config.yaml
.task/: ca.cert.pem  samuli.cert.pem  samuli.key.pem
.vim/: README.md  dein.toml  deinlazy.toml  filetype.vim  ft.dein.toml  (+3 more)
(+208 files in other folders)
