cabal-version: 1.12

name:           xmonad-my
version:        0.0.0
build-type:     Simple

executable xmonad-my
  main-is: xmonad.hs
  other-modules:
      Debug
      MyNotify
      MyRun
      MyXmobar
      Scratchpads
      SolarizedColorScheme
      MyTheme
      Util
      MyMain
      MyLayouts
      Paths_xmonad_my
  hs-source-dirs:
      ./.
      lib
  default-extensions: DeriveDataTypeable FlexibleContexts FlexibleInstances InstanceSigs LambdaCase MultiParamTypeClasses NamedFieldPuns NoImplicitPrelude NoMonomorphismRestriction PartialTypeSignatures RecordWildCards ScopedTypeVariables TupleSections TypeApplications
  ghc-options: -dynamic -threaded -O2 -rtsopts
  ghc-options:
    -Weverything
    -Wno-unsafe
    -Wno-partial-type-signatures
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-missing-export-lists
    -Wno-unused-top-binds
    -Wno-unused-do-bind
  build-depends:
      X11
    , base
    , containers
    , dbus
    , directory
    , text
    , process
    , unix
    , utf8-string
    , xmobar >=0.30
    , xmonad >=0.15
    , xmonad-contrib >=0.15
  default-language: Haskell2010
